# Pythom_FastAPI_TDD

./: Makefile  docker-compose.yml  pyproject.toml
fastapi_tdd/: main.py  routers.py
fastapi_tdd/controllers/: product.py
fastapi_tdd/db/: mongo.py
fastapi_tdd/models/: product.py
fastapi_tdd/schemas/: product.py
fastapi_tdd/usecases/: product.py
tests/: conftest.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
